# tmxpp

./: .clang-format  CMakeLists.txt  README.md  find_dependencies.cmake  tmxppConfig.cmake
cmake/: find_dependencies.cmake
doc/: tmxpp.md
include/: tmxpp.hpp
include/tmxpp/: Animation.hpp  Color.hpp  Constrained.hpp  Data.hpp  Degrees.hpp  File.hpp  Flip.hpp  Flipped_gid.hpp  Flipped_global_id.hpp  Frame.hpp  Image.hpp  Image_collection.hpp  Image_layer.hpp  Layer.hpp  Map.hpp  Object.hpp  Object_layer.hpp  Offset.hpp  Pixel.hpp  Pixels.hpp  Point.hpp  Properties.hpp  Property.hpp  Size.hpp  Strong_typedef.hpp  Tile_id.hpp  Tile_layer.hpp  Tile_set.hpp  Unique_id.hpp  Unit_interval.hpp  exceptions.hpp  read.hpp  write.hpp
include/tmxpp/impl/: Raw_tile_id.hpp  Strong_typedef.hpp  Xml.hpp  exceptions.hpp  read_utility.hpp  tmx_info.hpp  to_color.hpp  to_data_flipped_id.hpp  to_flipped_global_id.hpp  to_point.hpp  to_string_color.hpp  to_string_flipped_global_ids.hpp  to_string_flipped_ids.hpp  write_poly.hpp  write_utility.hpp
src/: Xml.cpp  exceptions.cpp  read.cpp  write.cpp
src/impl/: Xml.cpp  exceptions.cpp
